# vidtoolz-colored-textclip

./: README.md  pyproject.toml
tests/: test_vidtoolz_colored_textclip.py
vidtoolz_colored_textclip/: __init__.py
vidtoolz_colored_textclip/assets/: Sharpwipereverb.m4a
