[project]
name = "vidtoolz-colored-textclip"
version = "0.0.2"
description = "Create a color clip with overlaid text"
readme = "README.md"
authors = [{ name = "Sukhbinder Singh" }]
license = { text = "Apache-2.0" }
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = ["vidtoolz", "numpy"]

[project.urls]
Homepage = "https://github.com/sukhbinder/vidtoolz-colored-textclip"
Changelog = "https://github.com/sukhbinder/vidtoolz-colored-textclip/releases"
Issues = "https://github.com/sukhbinder/vidtoolz-colored-textclip/issues"
CI = "https://github.com/sukhbinder/vidtoolz-colored-textclip/actions"

[project.entry-points."vidtoolz_plugins"]
textclip = "vidtoolz_colored_textclip:textclip_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
